--- a/templates/index.html
+++ b/templates/index.html
@@ -292,22 +292,36 @@
             </div>
             <div class="find-diff-game">
                 <div class="find-diff-main-image-container">
-                    <img class="find-diff-main-image" src="../static/images/miniGameImages/findDiffMain.png">
+                    <img class="find-diff-main-image" src="../static/images/miniGameImages/diffGame1.png">
                     <div class="diff-1 diff" data-index="0"></div>
                     <div class="diff-2 diff" data-index="1"></div>
                     <div class="diff-3 diff" data-index="2"></div>
                     <div class="diff-4 diff" data-index="3"></div>
                     <div class="diff-5 diff" data-index="4"></div>
                     <div class="diff-6 diff" data-index="5"></div>
+                    <div class="diff-7 diff" data-index="6"></div>
+                    <div class="diff-8 diff" data-index="7"></div>
+                    <div class="diff-9 diff" data-index="8"></div>
+                    <div class="diff-10 diff" data-index="9"></div>
+                    <div class="diff-11 diff" data-index="10"></div>
+                    <div class="diff-12 diff" data-index="11"></div>
+                    <div class="diff-13 diff" data-index="12"></div>
                 </div>
                 <div class="find-diff-second-image-container">
-                    <img class="find-diff-second-image" src="../static/images/miniGameImages/findDiffSec.png" />
+                    <img class="find-diff-second-image" src="../static/images/miniGameImages/diffGame2.png" />
                     <div class="diff-1 diff" data-index="0"></div>
                     <div class="diff-2 diff" data-index="1"></div>
                     <div class="diff-3 diff" data-index="2"></div>
                     <div class="diff-4 diff" data-index="3"></div>
                     <div class="diff-5 diff" data-index="4"></div>
                     <div class="diff-6 diff" data-index="5"></div>
+                    <div class="diff-7 diff" data-index="6"></div>
+                    <div class="diff-8 diff" data-index="7"></div>
+                    <div class="diff-9 diff" data-index="8"></div>
+                    <div class="diff-10 diff" data-index="9"></div>
+                    <div class="diff-11 diff" data-index="10"></div>
+                    <div class="diff-12 diff" data-index="11"></div>
+                    <div class="diff-13 diff" data-index="12"></div>
                 </div>
             </div>
         </div>
