--- a/static/css/miniGamesStyle/_wheelStyle.scss
+++ b/static/css/miniGamesStyle/_wheelStyle.scss
@@ -13,7 +13,7 @@
 
 .find-diff-game-container {
   background-color: var(--background-color);
-  width: 61vw;
+  width: 80vw;
   height: 34vw;
   border-radius: 1vw;
   display: flex;
@@ -25,8 +25,9 @@
 
   @include mobile {
     width: 96vw;
-    height: 157vw;
+    height: 152vw;
     border-radius: 4vw;
+    row-gap: 5vw;
   }
 
   .find-diff-heading {
@@ -74,19 +75,21 @@
     @include mobile {
       flex-direction: column;
       align-items: center;
+      row-gap: 5vw;
     }
 
     .find-diff-main-image-container {
       position: relative;
       .find-diff-main-image {
-        width: 29vw;
+        width: 38vw;
+        border-radius: 1vw;
 
         @include mobile {
-          width: 79vw;
+          width: 90vw;
         }
       }
 
-      .diff-1.found, .diff-2.found, .diff-3.found, .diff-4.found, .diff-5.found, .diff-6.found {
+      .diff-1.found, .diff-2.found, .diff-3.found, .diff-4.found, .diff-5.found, .diff-6.found, .diff-7.found, .diff-8.found, .diff-9.found, .diff-10.found, .diff-11.found, .diff-12.found, .diff-13.found {
         opacity: 1;
       }
     }
@@ -94,14 +97,15 @@
     .find-diff-second-image-container {
       position: relative;
       .find-diff-second-image {
-        width: 29.5vw;
+        width: 38vw;
+        border-radius: 1vw;
 
         @include mobile {
-          width: 79.5vw;
+          width: 90vw;
         }
       }
 
-      .diff-1.found, .diff-2.found, .diff-3.found, .diff-4.found, .diff-5.found, .diff-6.found {
+      .diff-1.found, .diff-2.found, .diff-3.found, .diff-4.found, .diff-5.found, .diff-6.found, .diff-7.found, .diff-8.found, .diff-9.found, .diff-10.found, .diff-11.found, .diff-12.found, .diff-13.found {
         opacity: 1;
       }
     }
@@ -115,23 +119,44 @@
     font-size: 6vw
   }
 }
-.diff-1 {position: absolute; width: 3vw; height: 4vw; border-radius: 50%; bottom: 1.5vw; left: 4vw; border: 0.35vw solid red; opacity: 0; transition: opacity 0.5s ease;
-  @include mobile {width: 8vw; height: 12vw; bottom: 3.5vw; left: 11vw; border: 0.7vw solid red;}
+.diff-1 {position: absolute; width: 3.5vw; height: 3.5vw; border-radius: 50%; bottom: 2.2vw; left: 3.1vw; border: 0.35vw solid red; opacity: 0; transition: opacity 0.5s ease;
+  @include mobile {width: 8vw; height: 8vw; bottom: 5.5vw; left: 8vw; border: 0.7vw solid red;}
 }
-.diff-2 {position: absolute; width: 4vw; height: 1.5vw; border-radius: 50%; bottom: 8.3vw; left: 11.2vw; border: 0.35vw solid red; opacity: 0; transition: opacity 0.5s ease;
-  @include mobile {width: 9vw; height: 3.5vw; bottom: 22vw; left: 31.2vw; border: 0.7vw solid red;}
+.diff-2 {position: absolute; width: 2vw; height: 1.5vw; border-radius: 50%; bottom: 3.9vw; left: 7.1vw; border: 0.35vw solid red; opacity: 0; transition: opacity 0.5s ease;
+  @include mobile {width: 5vw; height: 3.5vw; bottom: 9vw; left: 16.5vw; border: 0.7vw solid red;}
 }
-.diff-3 {position: absolute; width: 2.5vw; height: 2vw; border-radius: 50%; bottom: 6.3vw; right: 4.2vw; border: 0.35vw solid red; opacity: 0; transition: opacity 0.5s ease;
-  @include mobile {width: 6vw; height: 6.5vw; bottom: 16.3vw; right: 11.2vw; border: 0.7vw solid red;}
+.diff-3 {position: absolute; width: 2.5vw; height: 2vw; border-radius: 50%; bottom: 4.3vw; right: 8.5vw; border: 0.35vw solid red; opacity: 0; transition: opacity 0.5s ease;
+  @include mobile {width: 5vw; height: 5vw; bottom: 10.3vw; right: 20.5vw; border: 0.7vw solid red;}
 }
-.diff-4 {position: absolute; width: 6.5vw; height: 6vw; border-radius: 50%; bottom: 10.3vw; right: 6.2vw; border: 0.35vw solid red; opacity: 0; transition: opacity 0.5s ease;
-  @include mobile {width: 18.5vw; height: 14vw; bottom: 27.3vw; right: 16.2vw; border: 0.7vw solid red;}
+.diff-4 {position: absolute; width: 4.5vw; height: 4vw; border-radius: 50%; bottom: 4.3vw; right: 10.2vw; border: 0.35vw solid red; opacity: 0; transition: opacity 0.5s ease;
+  @include mobile {width: 9vw; height: 9vw; bottom: 9.5vw; right: 25.2vw; border: 0.7vw solid red;}
 }
-.diff-5 {position: absolute; width: 3vw; height: 3vw; border-radius: 50%; top: 2.5vw; right: 14.2vw; border: 0.35vw solid red; opacity: 0; transition: opacity 0.5s ease;
-  @include mobile {width: 7vw; height: 7vw; top: 7.5vw; right: 39.2vw; border: 0.7vw solid red;}
+.diff-5 {position: absolute; width: 2vw; height: 2vw; border-radius: 50%; top: 7.5vw; right: 7vw; border: 0.35vw solid red; opacity: 0; transition: opacity 0.5s ease;
+  @include mobile {width: 5vw; height: 5vw; top: 17.5vw; right: 16.2vw; border: 0.7vw solid red;}
 }
-.diff-6 {position: absolute; width: 3vw; height: 3vw; border-radius: 50%; top: 9.5vw; right: 14.2vw; border: 0.35vw solid red; opacity: 0; transition: opacity 0.5s ease;
-  @include mobile {width: 8vw; height: 8vw; top: 26.5vw; right: 38.9vw; border: 0.7vw solid red;}
+.diff-6 {position: absolute; width: 13vw; height: 3vw; border-radius: 50%; top: 10.6vw; right: 2.2vw; border: 0.35vw solid red; opacity: 0; transition: opacity 0.5s ease;
+  @include mobile {width: 34vw; height: 7vw; top: 25.5vw; right: 1.9vw; border: 0.7vw solid red;}
+}
+.diff-7 {position: absolute; width: 5vw; height: 3vw; border-radius: 50%; top: 9vw; left: 8vw; border: 0.35vw solid red; opacity: 0; transition: opacity 0.5s ease;
+  @include mobile {width: 10vw; height: 7vw; top: 21.5vw; left: 19.9vw; border: 0.7vw solid red;}
+}
+.diff-8 {position: absolute; width: 6vw; height: 6vw; border-radius: 50%; top: 15.5vw; left: 5.2vw; border: 0.35vw solid red; opacity: 0; transition: opacity 0.5s ease;
+  @include mobile {width: 14vw; height: 14vw; top: 37.5vw; left: 11.9vw; border: 0.7vw solid red;}
+}
+.diff-9 {position: absolute; width: 6vw; height: 5vw; border-radius: 50%; top: 10.5vw; left: 5.2vw; border: 0.35vw solid red; opacity: 0; transition: opacity 0.5s ease;
+  @include mobile {width: 15vw; height: 15vw; top: 23.5vw; left: 11.9vw; border: 0.7vw solid red;}
+}
+.diff-10 {position: absolute; width: 6vw; height: 4vw; border-radius: 50%; top: 12.5vw; right: 1.2vw; border: 0.35vw solid red; opacity: 0; transition: opacity 0.5s ease;
+  @include mobile {width: 12vw; height: 10vw; top: 30.5vw; right: 3.9vw; border: 0.7vw solid red;}
+}
+.diff-11 {position: absolute; width: 3vw; height: 2vw; border-radius: 50%; top: 9vw; right: 4.2vw; border: 0.35vw solid red; opacity: 0; transition: opacity 0.5s ease;
+  @include mobile {width: 8vw; height: 5vw; top: 21.5vw; right: 9.9vw; border: 0.7vw solid red;}
+}
+.diff-12 {position: absolute; width: 8vw; height: 4vw; border-radius: 50%; top: 13vw; right: 7.2vw; border: 0.35vw solid red; opacity: 0; transition: opacity 0.5s ease;
+  @include mobile {width: 18vw; height: 10vw; top: 30.5vw; right: 16.9vw; border: 0.7vw solid red;}
+}
+.diff-13 {position: absolute; width: 9vw; height: 9vw; border-radius: 50%; top: 10vw; right: 18.2vw; border: 0.35vw solid red; opacity: 0; transition: opacity 0.5s ease;
+  @include mobile {width: 22vw; height: 20vw; top: 23.5vw; right: 42.9vw; border: 0.7vw solid red;}
 }
 
 
