--- a/static/css/loginPageStyle/login.scss
+++ b/static/css/loginPageStyle/login.scss
@@ -370,3 +370,63 @@
     }
   }
 }
+
+.pop-up-check-reg-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.pop-up-check-reg-container {
+  background-color: var(--background-color);
+  width: 21vw;
+  height: 9vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  align-items: center;
+  border-radius: 1.5vw;
+  row-gap: 1vw;
+  font-family: "Akshar", sans-serif;
+  font-weight: 600;
+
+  @include mobile {
+    width: 70vw;
+    height: 50vw;
+    row-gap: 3vw;
+    border-radius: 3vw;
+  }
+
+  .pop-up-check-reg-text {
+    text-align: center;
+    width: 50%;
+    font-size: 1.1vw;
+
+    @include mobile {
+      font-size: 3vw;
+      width: 72%;
+    }
+  }
+}
+
+.pop-up-check-reg-cross {
+  position: absolute;
+  top: 1vw;
+  width: 2vw;
+  right: 1vw;
+  cursor: pointer;
+
+  @include mobile {
+    width: 5vw;
+    top: 2vw;
+    right: 2vw;
+  }
+}
