--- a/templates/gameStageTwo.html
+++ b/templates/gameStageTwo.html
@@ -110,21 +110,21 @@
                     <div class="draw-date-container">
                         <div class="draw-date">
                             <div class="draw-date-checkbox">
-                                <img class="draw-date-checkbox-icon" src="../static/images/mainPageImages/drawIconYes.png" alt="" />
+                                <img class="draw-date-checkbox-icon" src="../static/images/mainPageImages/drawIconNot.png" alt="" />
                             </div>
-                            <span class="draw-date-text">розыгрыш призов с 1 по 7</span>
+                            <span class="draw-date-text">розыгрыш призов с 18 по 24</span>
                         </div>
                         <div class="draw-date">
                             <div class="draw-date-checkbox">
                                 <img class="draw-date-checkbox-icon" src="../static/images/mainPageImages/drawIconNot.png" alt="" />
                             </div>
-                            <span class="draw-date-text">розыгрыш призов с 8 по 14</span>
+                            <span class="draw-date-text">розыгрыш призов с 25 по 1</span>
                         </div>
                         <div class="draw-date">
                             <div class="draw-date-checkbox">
                                 <img class="draw-date-checkbox-icon" src="../static/images/mainPageImages/drawIconNot.png" alt="" />
                             </div>
-                            <span class="draw-date-text">розыгрыш призов с 15 по 21</span>
+                            <span class="draw-date-text">розыгрыш призов с 2 по 8</span>
                         </div>
                     </div>
                     <div class="check-registration-button">
@@ -216,6 +216,7 @@
         <img class="footer-gifts" src="../static/images/globalsImages/giftsImage.png" />
     </footer>
     <audio id="audio" loop><source src="../static/sounds/sound.mp3" type="audio/mpeg"/></audio>
+    <script src="../static/js/const.js"></script>
     <script src="../static/js/soundSwitch.js"></script>
     <script src="../static/js/checkRegistration.js"></script>
     <script src="../static/js/addFio.js"></script>
