--- a/templates/index.html
+++ b/templates/index.html
@@ -114,27 +114,27 @@
                     </div>
                 </div>
                 <div class="profile-actions-container">
-                    <div class="rewards-button">
+                    <div class="rewards-button disable">
                         Награды
                     </div>
                     <div class="draw-date-container">
                         <div class="draw-date">
                             <div class="draw-date-checkbox">
-                                <img class="draw-date-checkbox-icon" src="../static/images/mainPageImages/drawIconYes.png" alt="" />
+                                <img class="draw-date-checkbox-icon" src="../static/images/mainPageImages/drawIconNot.png" alt="" />
                             </div>
-                            <span class="draw-date-text">розыгрыш призов с 1 по 7</span>
+                            <span class="draw-date-text">розыгрыш призов с 18 по 24</span>
                         </div>
                         <div class="draw-date">
                             <div class="draw-date-checkbox">
                                 <img class="draw-date-checkbox-icon" src="../static/images/mainPageImages/drawIconNot.png" alt="" />
                             </div>
-                            <span class="draw-date-text">розыгрыш призов с 8 по 14</span>
+                            <span class="draw-date-text">розыгрыш призов с 25 по 1</span>
                         </div>
                         <div class="draw-date">
                             <div class="draw-date-checkbox">
                                 <img class="draw-date-checkbox-icon" src="../static/images/mainPageImages/drawIconNot.png" alt="" />
                             </div>
-                            <span class="draw-date-text">розыгрыш призов с 15 по 21</span>
+                            <span class="draw-date-text">розыгрыш призов с 2 по 8</span>
                         </div>
                     </div>
                     <div class="check-registration-button">
@@ -154,7 +154,7 @@
             <div class="main-game-step" id="step_7" style="display: none">7</div>
             <div class="main-game-step" id="step_8" style="display: none">8</div>
             <div class="main-game-step" id="step_9" style="display: none">9</div>
-            <div class="main-game-step" id="step_10" style="display: flex">10</div>
+            <div class="main-game-step" id="step_10" style="display: none">10</div>
             <div class="main-game-step" id="step_11" style="display: none">11</div>
             <div class="main-game-step" id="step_12" style="display: none">12</div>
             <div class="main-game-step" id="step_13" style="display: none">13</div>
@@ -164,7 +164,7 @@
             <div class="main-game-step" id="step_17" style="display: none">17</div>
             <div class="main-game-step" id="step_18" style="display: none">18</div>
             <div class="main-game-step" id="step_19" style="display: none">19</div>
-            <div class="main-game-step" id="step_20" style="display: flex">20</div>
+            <div class="main-game-step" id="step_20" style="display: none">20</div>
             <div class="main-game-step" id="step_21" style="display: none">21</div>
             <div class="main-game-step" id="step_22" style="display: none">22</div>
             <div class="main-game-step" id="step_23" style="display: none">23</div>
@@ -174,7 +174,7 @@
             <div class="main-game-step" id="step_27" style="display: none">27</div>
             <div class="main-game-step" id="step_28" style="display: none">28</div>
             <div class="main-game-step" id="step_29" style="display: none">29</div>
-            <div class="main-game-step" id="step_30" style="display: flex">30</div>
+            <div class="main-game-step" id="step_30" style="display: none">30</div>
             <div class="main-game-step" id="step_31" style="display: none">31</div>
             <div class="main-game-step" id="step_32" style="display: none">32</div>
             <div class="main-game-step" id="step_33" style="display: none">33</div>
@@ -184,7 +184,7 @@
             <div class="main-game-step" id="step_37" style="display: none">37</div>
             <div class="main-game-step" id="step_38" style="display: none">38</div>
             <div class="main-game-step" id="step_39" style="display: none">39</div>
-            <div class="main-game-step" id="step_40" style="display: flex">40</div>
+            <div class="main-game-step" id="step_40" style="display: none">40</div>
         </div>
     </div>
     <div class="treasure-game-wrapper" id="Game1" style="display: none">
@@ -257,33 +257,6 @@
             </div>
         </div>
     </div>
-<!--    <div class="wheel-game-wrapper" id="Game4" style="display: none">-->
-<!--        <div class="wheel-game-container">-->
-<!--            <div class="wheel-game-heading">-->
-<!--                <span class="wheel-game-heading-text">-->
-<!--                    Колесо фортуны-->
-<!--                </span>-->
-<!--                <img class="wheel-game-heading-cross" src="../static/images/miniGameImages/crossIcon.png" />-->
-<!--            </div>-->
-<!--            <div class="wheel-game">-->
-<!--                <div class="pointer"></div>-->
-<!--                <div class="wheel-container">-->
-<!--                    <div class="wheel" id="wheel">-->
-<!--                        <div class="segment" data-value="1"><img class="icon-segment" src="../static/images/prizesPageImages/robotIcon.png"> </div>-->
-<!--                        <div class="segment" data-value="2"><img class="icon-segment" src="../static/images/prizesPageImages/aerogrillIcon.png"></div>-->
-<!--                        <div class="segment" data-value="3"><img class="icon-segment" src="../static/images/prizesPageImages/bigGrillIcon.png"></div>-->
-<!--                        <div class="segment" data-value="4"><img class="icon-segment" src="../static/images/prizesPageImages/yandexStationIcon.png"></div>-->
-<!--                        <div class="segment" data-value="5"><img class="icon-segment" src="../static/images/prizesPageImages/shoperImage.png"></div>-->
-<!--                        <div class="segment" data-value="6"><img class="icon-segment" src="../static/images/prizesPageImages/grillIcon.png"></div>-->
-<!--                        <div class="segment" data-value="7"><img class="icon-segment" src="../static/images/prizesPageImages/robotIcon.png"></div>-->
-<!--                        <div class="segment" data-value="8"><img class="icon-segment" src="../static/images/prizesPageImages/robotIcon.png"></div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <button class="wheel-button" onclick="spinWheel()">Вращать</button>-->
-<!--                <div id="result"></div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
     <div class="find-diff-game-wrapper" id="Game4" style="display: none">
         <div class="find-diff-game-container">
             <div class="find-diff-heading">
@@ -386,6 +359,7 @@
         <img class="footer-gifts" src="../static/images/globalsImages/giftsImage.png" />
     </footer>
     <audio id="audio" loop><source src="../static/sounds/sound.mp3" type="audio/mpeg"/></audio>
+    <script src="../static/js/const.js"></script>
     <script src="../static/js/soundSwitch.js"></script>
     <script src="../static/js/puzzleGame.js"></script>
     <script src="../static/js/treasureGame.js"></script>
