--- a/templates/prizesPage.html
+++ b/templates/prizesPage.html
@@ -199,5 +199,6 @@
         <img class="footer-gifts" src="../static/images/globalsImages/giftsImage.png" />
     </footer>
 </body>
+<script src="../static/js/const.js"></script>
 <script src="../static/js/soundSwitch.js"></script>
 </html>
