--- a/static/css/mainPageStyle/_profileAndDateInfo.scss
+++ b/static/css/mainPageStyle/_profileAndDateInfo.scss
@@ -35,17 +35,15 @@
 
 
     &-image {
-      border: 0.2vw solid white;
       border-radius: 50%;
       width: 5vw;
       height: 5vw;
       background-size: cover;
-      background-image: url("../../images/mainPageImages/avatarPhoto.jpg");
+      background-image: url("../../images/globalsImages/emptyProfilePhoto.png");
 
       @include mobile {
         width: 8vw;
         height: 8vw;
-        border: 0.6vw solid white;
       }
 
     }
@@ -202,9 +200,9 @@
   .rewards-button {
     text-align: center;
     width: 80%;
-    background-color: #FF4A15;
+    background-color: #D9D9D9;
     border-radius: 1vw;
-    color: white;
+    color: #AEAEAE;
     box-shadow: 0 0.2vw 0.5vw 0 #00000040;
     font-family: "Akshar", sans-serif;
     font-weight: 600;
@@ -217,7 +215,7 @@
     position: relative;
 
     &:hover {
-      background-color: #932d16;
+      background-color: #D9D9D9;
     }
 
     &:active {
