--- a/templates/supplierPage.html
+++ b/templates/supplierPage.html
@@ -107,6 +107,7 @@
         </div>
     </div>
     <audio id="audio" loop><source src="../static/sounds/sound.mp3" type="audio/mpeg"/></audio>
+    <script src="../static/js/const.js"></script>
     <script src="../static/js/supplier.js"></script>
 </body>
 </html>
