--- a/templates/gameStageTwo.html
+++ b/templates/gameStageTwo.html
@@ -28,13 +28,13 @@
                     <nav class="header-inner__navigation navigation" >
                         <ul class="navigation-menu">
                             <li class="navigation-menu__item">
-                                Условия
+                                <a href="/conditions">Условия</a>
                             </li>
                             <li class="navigation-menu__item">
                                 <a href="/gifts">Подарки</a>
                             </li>
                             <li class="navigation-menu__item">
-                                Победители
+                                <a href="/winners">Победители</a>
                             </li>
                         </ul>
                     </nav>
