--- a/templates/conditions.html
+++ b/templates/conditions.html
@@ -67,10 +67,10 @@
 
             <h2>Какие призы можно получить в акции?</h2>
             <p>Конкурс состоит из 2-х этапов:</p>
-            <ul>
+            <ol>
                 <li>Первый этап состоит из 40 шагов на сайте, пройдя которые вы получите право на участие в розыгрыше главных призов 1-го этапа.</li>
                 <li>Второй этап состоит из 20 шагов, пройдя которые вы получите право на участие в розыгрыше главного приза 2-го этапа.</li>
-            </ul>
+            </ol>
             <p>Еженедельные розыгрыши проводятся среди всех Покупателей, зарегистрировавших не менее 1 чека на сайте <a href="https://promo.tdanix.ru/">https://promo.tdanix.ru/</a>:</p>
             <ul>
                 <li>Аэрогриль 2.5 л</li>
@@ -152,6 +152,11 @@
             </ul>
         </div>
     </div>
+    <div class="sound-switch">
+        <img class="sound-switch-icon" id="soundSwitch" src="../static/images/globalsImages/soundOffIcon.png"/>
+    </div>
+    <audio id="audio" loop><source src="../static/sounds/sound.mp3" type="audio/mpeg"/></audio>
+    <script src="../static/js/soundSwitch.js"></script>
     <script src="../static/js/const.js"></script>
 </body>
 </html>
