--- a/static/css/conditionsPageStyle/conditionsMainStyle.scss
+++ b/static/css/conditionsPageStyle/conditionsMainStyle.scss
@@ -43,4 +43,25 @@ body {
   background-color: var(--background-color-el);
   border-radius: 1vw;
   padding: 1vw;
+  word-break: break-word;
+
+
+  @include mobile {
+    padding: 4vw;
+    line-height: 1.25;
+
+    & > p {
+      margin-bottom: 5vw;
+    }
+
+    & > h2{
+      font-size: 5vw;
+      margin-bottom: 1.5vw;
+      line-height: 1.1;
+    }
+
+    & > ol, ul{
+      margin-bottom: 5vw;
+    }
+  }
 }
