--- a/templates/winners.html
+++ b/templates/winners.html
@@ -55,5 +55,10 @@
           Победителей пока что нет...
         </div>
     </div>
+    <div class="sound-switch">
+        <img class="sound-switch-icon" id="soundSwitch" src="../static/images/globalsImages/soundOffIcon.png"/>
+    </div>
+    <audio id="audio" loop><source src="../static/sounds/sound.mp3" type="audio/mpeg"/></audio>
+    <script src="../static/js/soundSwitch.js"></script>
 </body>
 </html>
