--- a/static/css/mainPageStyle/mainStyle.scss
+++ b/static/css/mainPageStyle/mainStyle.scss
@@ -20,7 +20,8 @@
         "../shared/popUpBalls",
         "../shared/gameGift",
         "../shared/addFio",
-        "../shared/checkRegistration";
+        "../shared/checkRegistration",
+        "../shared/rewards";
 
 body {
   background-color: var(--background-color);
