--- a/templates/conditions.html
+++ b/templates/conditions.html
@@ -46,9 +46,7 @@
             </div>
         </header>
         <div class="main-logo">
-            <span class="main-logo__heading">
-                ЗМЕЙКА УДАЧИ
-            </span>
+            <img class="main-logo__heading" src="../static/images/globalsImages/logoText.png" />
             <img class="main-logo__image" src="../static/images/mainPageImages/year.png" />
         </div>
         <div class="conditions-text-container">
