--- a/templates/index.html
+++ b/templates/index.html
@@ -52,9 +52,7 @@
             </div>
         </header>
         <div class="main-logo">
-            <span class="main-logo__heading">
-                ЗМЕЙКА УДАЧИ
-            </span>
+            <img class="main-logo__heading" src="../static/images/globalsImages/logoText.png" />
             <img class="main-logo__image" src="../static/images/mainPageImages/year.png" />
         </div>
         <div class="info-block-container">
@@ -350,6 +348,17 @@
             </form>
         </div>
     </div>
+    <div class="rewards-wrapper" style="display: none">
+        <div class="rewards-container">
+            <div class="rewards-heading">
+                <span class="rewards-heading__text">Ваши награды</span>
+                <img src="../static/images/miniGameImages/crossIcon.png" class="rewards-heading__cross" />
+            </div>
+            <div class="reward-container">
+
+            </div>
+        </div>
+    </div>
 
     <div class="sound-switch">
         <img class="sound-switch-icon" id="soundSwitch" src="../static/images/globalsImages/soundOffIcon.png"/>
@@ -360,6 +369,7 @@
     </footer>
     <audio id="audio" loop><source src="../static/sounds/sound.mp3" type="audio/mpeg"/></audio>
     <script src="../static/js/const.js"></script>
+    <script src="../static/js/rewards.js"></script>
     <script src="../static/js/soundSwitch.js"></script>
     <script src="../static/js/puzzleGame.js"></script>
     <script src="../static/js/treasureGame.js"></script>
