--- a/templates/supplierPage.html
+++ b/templates/supplierPage.html
@@ -52,7 +52,7 @@
                 <div class="reviews-supplier-photo">
                     <img class="reviews-supplier-logo" src="">
                     <div class="reviews-gift">
-                        <span class="reviews-gift__photo">порарок от компании</span>
+                        <span class="reviews-gift__photo"></span>
                     </div>
                 </div>
                 <div class="reviews-description">
