--- a/static/css/winnersPageStyle/winnersMainStyle.css
+++ b/static/css/winnersPageStyle/winnersMainStyle.css
@@ -244,8 +244,8 @@ svg * {
   border-radius: 1.5vw;
   height: 8vw;
   justify-content: center;
-  align-items: center;
   column-gap: 5vw;
+  align-items: center;
 }
 @media (max-width: 900px) {
   .main-logo {
@@ -253,12 +253,13 @@ svg * {
   }
 }
 .main-logo__heading {
-  font-size: 6vw;
-  font-family: "Bebas Neue", sans-serif;
+  width: 28vw;
+  height: 6vw;
 }
 @media (max-width: 900px) {
   .main-logo__heading {
-    font-size: 9vw;
+    width: 42vw;
+    height: 8.5vw;
   }
 }
 .main-logo__image {
